--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,41 @@ html{
     width:60%;
 }
 
+
+.TableContainer{
+    width:90%;
+    margin:6vh auto;
+}
+
+.TableHeading{
+    text-align: center;
+    margin-bottom: 5vh;
+    font-weight: 900;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+}
+
+table, th, td {
+    /* border: 1px solid rgb(0, 0, 0); */
+    /* border-radius: 3px; */
+}
+
+th, td {
+    padding: 10px;
+    text-align: left;
+    font-weight: 500;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+
 @media (max-width: 767px) {
     .container {
         max-width: 100%;
